fix profile update shop and user
